# data-engineering-phase1-practice

./: .gitignore  README.md
.github/: pull_request_template.md
extremes/big_csv_file/: .gitignore  aggerate_data.json  final_aggregated_data.json  initial_processing.py  main.py  poc.ipynb
learning-data-engineering-basics/data_generation/: data_generation.py  readme.md
learning-data-engineering-basics/data_lake/: docker-compose.yaml
learning-data-engineering-basics/data_warehouse/: main.ipynb  main.py
learning-data-engineering-basics/learning_etl/: main.py  timming.ipynb  warehouse.test_db.wal
learning-data-engineering-basics/learning_etl/raw_data/: department.csv  designation.csv  employee.csv  salary_structure.csv
learning-python/different_libraries/learning_django_ninja/: readme.md
learning-python/different_libraries/learning_pandas/: .gitignore  combined_fake_employee_data.csv  pandas.html  pandas.ipynb  pandas2.ipynb  requirements.txt
learning-python/my_package/: README.md  pyproject.toml
learning-python/my_package/rohit_math_helper/: __init__.py  main.py
learning-python/my_package_testing/: test.py
milestone-1/: questions.md
milestone-1/git/: task.md
milestone-1/learning_docker/: notes.md
milestone-1/learning_git/: task.md
milestone-1/learning_pytest/: main.py
milestone-1/learning_requests/: main.py
milestone-1/pyenv/: notes.md
milestone-1/venv-practice/: notes.md
milestone-2/learning-beautifulsoup4/: main.py  pyproject.toml
python/core/modules/: main.py
python/mini-project/: readme.md  requirements.txt  run_project.py
(+79 files in other folders)
